--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,87 +1,163 @@
-.container-home{
-    height: 94vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    flex-direction: row;
+.container-home {
+  height: 94vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding: 80px;
 }
 
-.container-home h1{
-    color: #ffff;
-    font-size: 80px;
-    font-weight: 600;
-    padding-right: 80px;
-    width: 50vh;
-}
-.container-home img{
-    padding-left: 50px;
-    height: 55%;
+.container-home h1 {
+  color: #ffff;
+  font-size: 80px;
+  font-weight: 600;
+  padding-right: 80px;
+  width: 50vh;
 }
 
-.welcome{
- display: flex;
- justify-content: center;
- flex-direction: column;
+.container-home img {
+  height: 55%;
 }
 
-.welcome p{
-    color: #ffff;
-    width: 250px;
-    font-size: 20px;
-    padding-top: 30px;
-    padding-bottom: 40PX;
+.welcome {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.welcome p {
+  color: #ffff;
+  width: 250px;
+  font-size: 20px;
+  padding-top: 30px;
+  padding-bottom: 40PX;
 }
 
 .signupBtn {
-    width: 165px;
-    height: 50px;
-    border-radius: 30px;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding-left: 20px;
-    gap: 9px;
-    color: white;
-    background: linear-gradient(to right,rgb(128, 128, 255),rgb(186, 107, 231));
-    position: relative;
-    cursor: pointer;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.212);
+  width: 165px;
+  height: 50px;
+  border-radius: 30px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 20px;
+  gap: 9px;
+  color: white;
+  background: linear-gradient(to right, rgb(128, 128, 255), rgb(186, 107, 231));
+  position: relative;
+  cursor: pointer;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.212);
+}
+
+.arrow {
+  position: absolute;
+  right: 7.5px;
+  background-color: rgb(255, 255, 255);
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.signupBtn:hover .arrow {
+  animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes slide-in-left {
+  0% {
+    transform: translateX(-10px);
+    opacity: 0;
   }
-  
-  .arrow {
-    position: absolute;
-    right: 7.5px;
-    background-color: rgb(255, 255, 255);
-    width: 25px;
-    height: 25px;
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+@media (max-width: 900px) {
+  .container-home {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
+
+@media (max-width: 700px) {
+  .container-home {
+    padding: 50px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-  }
-  
-  .signupBtn:hover .arrow {
-    animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  }
-  
-  @keyframes slide-in-left {
-    0% {
-      transform: translateX(-10px);
-      opacity: 0;
-    }
-  
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
   }
 
-
-  @media (max-width: 1200px) {
-    .container-home{
-      padding-top: 50px;
-      padding-bottom: 50px;
-    }
+  .container-home h1 {
+    color: #ffff;
+    font-size: 60px;
+    font-weight: 600;
+    padding-left: 120px;
   }
+
+  .container-home img {
+    padding-left: 0px;
+    height: 50%;
+  }
+
+  .welcome {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .text-welcome {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 80px;
+  }
+
+}
+
+@media (max-width: 520px) {
+  .container-home {
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+
+  }
+
+  .container-home h1 {
+    color: #ffff;
+    font-size: 50px;
+    max-width: 500px;
+    font-weight: 600;
+    padding-left: 120px;
+  }
+
+  .container-home img {
+   width: 80%;
+  }
+
+  .welcome {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .text-welcome {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 0px;
+  }
+}
