--- a/src/components/incomeCard/incomeCard.css
+++ b/src/components/incomeCard/incomeCard.css
@@ -79,3 +79,22 @@
   font-weight: 800;
   color: #FFF;
 }
+
+@media (max-width: 550px) {
+ .card-incomes {
+    width: 30vh;
+    height: auto;
+  }   
+}
+
+@media (max-width: 420px) {
+  .card-incomes {
+    width: 25vh;
+    height: auto;
+  }
+
+  .radio-inputs {
+    width: 200px;
+  }
+  
+}
