--- a/src/components/transactions/transactionItem.css
+++ b/src/components/transactions/transactionItem.css
@@ -1,15 +1,96 @@
-.container-list{
+.container-transactions {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 450px;
+    max-height: 600px;
+    border-radius: 10px;
+    background: linear-gradient(#212121, #212121) padding-box,
+        linear-gradient(145deg, transparent 40%, #e81cff, #40c9ff) border-box;
+    border: 2px solid transparent;
+    font-size: 14px;
+    font-family: inherit;
+    color: #ffff;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 20px;
+}
+
+.transaction-list {
+    scroll-snap-align: end;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+    background-color: #2c2656;
+    width: 300px;
+    height: 30px;
+    margin-bottom: 8px;
+}
+
+.padd-list {
+    padding-top: 20px;
+}
+
+.listado {
+    background-color: #2c2656;
+    width: 50%;
+    height: 40;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 8px;
+    margin-bottom: 8px;
+
 }
 
-.listado{
-    background-color: #2c2656;
-    width: 150px;
-    height: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+.container-transactions h3 {
+    text-transform: uppercase;
+    font-size: 25px;
 }
+
+.container-transactions::-webkit-scrollbar {
+    width: 8px;
+}
+
+.container-transactions::-webkit-scrollbar-track {
+    background: #2c2656;
+}
+
+.container-transactions::-webkit-scrollbar-thumb {
+    background-color: #e81cff;
+    border-radius: 4px;
+}
+
+.container-transactions::-webkit-scrollbar-thumb:hover {
+    background-color: #40c9ff;
+}
+
+.title-fixed h3{
+    margin-bottom: 10px;
+}
+@media (max-width: 550px) {
+    .container-transactions {
+        width: 30vh;
+        height: auto;
+    }
+}
+
+@media (max-width: 420px) {
+    .container-transactions {
+        width: 25vh;
+        height: auto;
+    }
+}
+
